chore: change result serving endpoint to accept signature as authorization method
